--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Chrome Extension Starter Kit",
   "description": "Chrome Extension Starter Kit is a comprehensive toolkit designed to streamline the process of developing Chrome extensions. Whether you're a seasoned developer or just starting out, this extension provides a solid foundation to kickstart your Chrome extension projects using the manifest v3 structure.",
   "version": "0.0.1",
+  "publisher": "Phantasm",
   "repository": {
     "type": "git",
     "url": "https://github.com/Phantasm0009/Chrome-Extension-Starter-Kit.git"
@@ -13,18 +14,24 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [
-    "onCommand:chrome-extension-starter-kit.helloWorld"
-  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "chrome-extension-starter-kit.helloWorld",
-        "title": "Hello World"
+        "command": "extension.generateChromeExtensionTemplate",
+        "title": "Generate Chrome Extension Template"
+      }
+    ],
+    "keybindings": [
+      {
+        "command": "extension.generateChromeExtensionTemplate",
+        "key": "ctrl+alt+g",
+        "mac": "cmd+alt+g",
+        "when": "editorTextFocus"
       }
     ]
   },
+  "activationEvents": [], 
   "scripts": {
     "vscode:prepublish": "npm run package",
     "compile": "webpack",
@@ -37,19 +44,21 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.79.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
+    "@types/ncp": "^2.0.5",
     "@types/node": "20.2.5",
+    "@types/vscode": "^1.79.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "@vscode/test-electron": "^2.3.2",
     "eslint": "^8.41.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.3",
+    "ncp": "^2.0.0",
     "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3",
     "webpack": "^5.85.0",
-    "webpack-cli": "^5.1.1",
-    "@vscode/test-electron": "^2.3.2"
+    "webpack-cli": "^5.1.1"
   }
 }
